# ubuntu-console

./: .bashrc  .gitignore  .markdownlint.json  .qwen-session  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  IMPROVEMENTS-PHASE2.md  IMPROVEMENTS.md  Makefile  README.md  WORKBOARD.md  cmake_install.cmake  compile_commands.json  docs-memory-graph-redesign.md  env.sh  inspection-report-2026-04-22.md  inspection.md  install.sh  license.cpp  llama-config.cmake  llama-version.cmake  llama.pc  pytest.ini  quant-guide.conf  tactical-console.bashrc  tactical-console.bashrc.monolith
.claude/: settings.local.json
.gemini/: settings.json
.qwen/: settings.json  settings.json.orig
common/: Makefile  build-info.cpp  cmake_install.cmake
config/: concept-aliases.json  mcporter.json  quant-guide.conf
docs/: AGENT-GUIDELINES.md  HAL-COMMAND-CATALOG.md  HAL-INTEGRATION.md  HAL-USAGE-GUIDE.md  architecture.md  autotune_spec.md  commands.md  dashboard.md  dependencies.md  inspection.md  llama-cpp-build-guide.md  llm.md  maintenance.md  openclaw.md  pwsh-build-prompt.md  pwsh-translation-prep.md  quick-start.md  reference.md  troubleshooting.md
examples/: Makefile  (+2 more)
scripts/: 01-constants.sh  02-error-handling.sh  03-design-tokens.sh  04-aliases.sh  05-ui-engine.sh  06-hooks.sh  07-telemetry.sh  08-maintenance.sh  09-openclaw.sh  09-openclaw.sh.bak  09-openclaw.sh.bak.old  09a-oc-gateway.sh  09b-gog.sh  09c-oc-core.sh  09d-oc-agents.sh  09e-oc-health.sh  09f-oc-misc.sh  10-deployment.sh  11-llm-manager.sh  11a-llm-registry.sh  11b-llm-autotune.sh  11c-llm-server.sh  11d-llm-gpu.sh  11e-llm-model.sh  11f-llm-runtime.sh  12-dashboard-help.sh  13-init.sh  14-wsl-extras.sh  15-model-recommender.sh  17-import-windows-user-env.sh  18-lint.sh  19-mirror-gigabrain-vault-to-windows.sh  20-run-tests.sh  autotune-model.sh  check-oc-agent-use.sh  import-windows-user-env.sh  kgraph.py  lint.sh  load-vault-env.sh  mirror-gigabrain-vault-to-windows.sh  (+5 more)
scripts/kgraph/: README-pkg.md  __init__.py  __main__.py  ast_extractor.py  audit_report.md  audit_security.md  benchmark.py  call_flow.py  cli.py  community.py  confidence.py  constants.py  git_hook.py  graph_db.py  html.py  life_index.py  mcp_server.py  memory_import.py  models.py  pr_dashboard.py  projection.py  pyproject.toml  query.py  report.py  security.py  security_audit.py  server.py  update.py  validate.py
scripts/kgraph/scripts/: kgraph  kgraph-audit  kgraph-benchmark  kgraph-pr-dashboard  kgraph-security  kgraph-validate
scripts/kgraph/templates/: kgraph.html
(+332 files in other folders)
