[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-kgraph"
version = "2.0.0"
description = "Knowledge graph — AST extractor, community detection, MCP server, CLI tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.25",
    "tree-sitter-bash>=0.25",
    "tree-sitter-python>=0.25",
]
all = [
    "openclaw-kgraph[ast]",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.urls]
Homepage = "https://github.com/waynegault/ubuntu-console"
Source = "https://github.com/waynegault/ubuntu-console"

[project.scripts]
kgraph = "kgraph.cli:main"

[tool.setuptools.packages.find]
include = ["kgraph*"]

[tool.setuptools.package-data]
kgraph = ["audit_security.md"]
