[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kgraph"
version = "2.0.0"
description = "Knowledge graph server, AST extractor, community detection, MCP, and CLI tools"
readme = "README-pkg.md"
authors = [
    {name = "wayne", email = "wayne@ubuntu-console"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["knowledge-graph", "ast", "community-detection", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/wayne/ubuntu-console"
Repository = "https://github.com/wayne/ubuntu-console"
Documentation = "https://github.com/wayne/ubuntu-console/tree/main/scripts/kgraph"

[project.scripts]
kgraph = "kgraph.cli:main"
kgraph-validate = "kgraph.validate:main"
kgraph-security = "kgraph.security:main"
kgraph-pr-dashboard = "kgraph.pr_dashboard:main"
kgraph-benchmark = "kgraph.benchmark:main"
kgraph-audit = "kgraph.security_audit:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kgraph*"]
namespaces = false
